# ToleranceMonitor

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
include/: ToleranceChecker.h  ToleranceChecker_c.h
src/: ToleranceChecker.cpp  ToleranceChecker_c.cpp  demo_c.c  main.cpp
